gcc/testsuite/rust.test/fail_compilation/redef_error3.rs
fn test() -> bool {
    true
}

fn test() -> i32 {
    123
}

fn main() {}
